Add mergething CLI with merge and init commands
- Added src/mergething/cli.py with two commands:
  - merge: Merges multiple IPython history files into a target file
  - init: Copies current IPython history to target directory with proper naming pattern
- Updated pyproject.toml to add console script entry point
- Added shell.nix for NixOS development environment
- Added .envrc for direnv support

Files changed:
- src/mergething/cli.py (new)
- pyproject.toml (modified)
- shell.nix (new)
- .envrc (new)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ classifiers = [
 requires-python = ">=3.8"
 dependencies = []
 
+[project.scripts]
+mergething = "mergething.cli:main"
+
 [project.urls]
 Homepage = "https://github.com/drorspei/mergething"
 Repository = "https://github.com/drorspei/mergething"
